<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/padding_screen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_title"
        android:textColor="@color/primary_light"
        android:textSize="@dimen/text_headline"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_medium">

        <Button
            android:id="@+id/btnProfiles"
            style="@style/DashboardButton"
            android:layout_width="@dimen/dashboard_card_width"
            android:layout_height="@dimen/dashboard_card_height"
            android:text="@string/menu_profiles"
            android:drawableTop="@android:drawable/ic_menu_manage"
            android:layout_marginEnd="@dimen/margin_medium" />

        <Button
            android:id="@+id/btnAppLock"
            style="@style/DashboardButton"
            android:layout_width="@dimen/dashboard_card_width"
            android:layout_height="@dimen/dashboard_card_height"
            android:text="@string/menu_app_lock"
            android:drawableTop="@android:drawable/ic_lock_lock"
            android:layout_marginEnd="@dimen/margin_medium" />

        <Button
            android:id="@+id/btnScreenTime"
            style="@style/DashboardButton"
            android:layout_width="@dimen/dashboard_card_width"
            android:layout_height="@dimen/dashboard_card_height"
            android:text="@string/menu_screen_time"
            android:drawableTop="@android:drawable/ic_menu_recent_history" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnAnalytics"
            style="@style/DashboardButton"
            android:layout_width="@dimen/dashboard_card_width"
            android:layout_height="@dimen/dashboard_card_height"
            android:text="@string/menu_analytics"
            android:drawableTop="@android:drawable/ic_menu_info_details"
            android:layout_marginEnd="@dimen/margin_medium" />

        <Button
            android:id="@+id/btnSettings"
            style="@style/DashboardButton"
            android:layout_width="@dimen/dashboard_card_width"
            android:layout_height="@dimen/dashboard_card_height"
            android:text="@string/menu_settings"
            android:drawableTop="@android:drawable/ic_menu_preferences" />
    </LinearLayout>
</LinearLayout>
